--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^10.0.1",
     "@pdf-lib/fontkit": "^1.1.1",
+    "@types/fs-extra": "^11.0.4",
     "app-root-path": "^3.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
