--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,11 @@ jobs:
         with:
           node-version: "20.10.0"
 
+      - name: create env file
+        run: |
+          touch .env
+          echo HOST=${{ secrets.HOST }} >> .env
+
       - name: 🔨 Build Project
         run: |
           npm install
