--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "date-fns": "^3.3.1",
+    "exceljs": "^4.4.0",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "pdf2pic": "^3.1.1",
