--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^10.0.1",
-    "@pdf-lib/fontkit": "^1.1.1",
-    "@types/fs-extra": "^11.0.4",
     "app-root-path": "^3.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -35,9 +33,9 @@
     "exceljs": "^4.4.0",
     "fs-extra": "^11.2.0",
     "multer": "^1.4.5-lts.1",
-    "pdf-lib": "^1.17.1",
     "pdf2pic": "^3.1.1",
     "pg": "^8.11.3",
+    "puppeteer": "^22.6.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sharp": "^0.33.2",
@@ -49,6 +47,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "29.2.4",
     "@types/multer": "^1.4.11",
     "@types/node": "18.11.18",
