--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           touch .env
           echo HOST=${{ secrets.HOST }} >> .env
+          echo DOMAIN=${{ secrets.DOMAIN }} >> .env
 
       - name: 🔨 Build Project
         run: |
