refactor: add path alias for middlewares

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@enums/*": ["src/enums/*"],
       "@modules/*": ["src/modules/*"],
       "@interceptors/*": ["src/interceptors/*"],
-      "@interfaces/*": ["src/interfaces/*"]
+      "@interfaces/*": ["src/interfaces/*"],
+      "@middlewares/*": ["src/middlewares/*"]
     }
   }
 }
