--- a/.github/workflows/deploy-tr.yml
+++ b/.github/workflows/deploy-tr.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       - main
-name: 🚀 Deploy website on push
+name: 🚀 Deploy website on push tr
 
 jobs:
   web-deploy:
@@ -20,18 +20,18 @@ jobs:
       - name: create env file
         run: |
           touch .env
-          echo HOST=${{ secrets.HOST }} >> .env
-          echo DOMAIN=${{ secrets.DOMAIN }} >> .env
+          echo HOST=${{ secrets.TR_HOST }} >> .env
+          echo DOMAIN=${{ secrets.TR_DOMAIN }} >> .env
 
       - name: 🔨 Build Project
         run: |
           npm install
           npm run build
 
-      - name: 📂 Sync files
+      - name: 📂 Sync files tr
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          server: ${{ secrets.GIT_CPANEL_REACT_SERVER }}
-          username: ${{ secrets.GIT_CPANEL_REACT_USER }}
-          password: ${{ secrets.GIT_CPANEL_REACT_PWD }}
-          protocol: ${{ secrets.GIT_CPANEL_REACT_PROTOCOL }}
+          server: ${{ secrets.SERVER }}
+          username: ${{ secrets.TR_USER }}
+          password: ${{ secrets.PASSWORD }}
+          protocol: ${{ secrets.PROTOCOL }}
