--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ on:
   push:
     branches:
       - main
-name: 🚀 Deploy website on push tr
+name: 🚀 Deploy website on push
 
 jobs:
   web-deploy:
@@ -20,18 +20,18 @@ jobs:
       - name: create env file
         run: |
           touch .env
-          echo HOST=${{ secrets.TR_HOST }} >> .env
-          echo DOMAIN=${{ secrets.TR_DOMAIN }} >> .env
+          echo HOST=${{ secrets.HOST }} >> .env
+          echo DOMAIN=${{ secrets.UZ_DOMAIN }} >> .env
 
       - name: 🔨 Build Project
         run: |
           npm install
           npm run build
 
-      - name: 📂 Sync files tr
+      - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.SERVER }}
-          username: ${{ secrets.TR_USER }}
+          username: ${{ secrets.USER }}
           password: ${{ secrets.PASSWORD }}
           protocol: ${{ secrets.PROTOCOL }}
