--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: create env file
         run: |
           touch .env
-          echo HOST=${{ secrets.HOST }} >> .env
+          echo HOST=${{ secrets.UZ_HOST }} >> .env
           echo DOMAIN=${{ secrets.UZ_DOMAIN }} >> .env
 
       - name: 🔨 Build Project
